@@ -1,0 +1,172 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+  <!-- Aeon Labs Smart Dimmer 6 -->
+  <Protocol refreshonnodeinfoframe="false"/>
+  <!-- Configuration Parameters -->
+  <CommandClass id="112">
+	<!--  Doesn't work 
+	<Value type="byte" index="2" genre="config" label="Dimmer Blink" units="" size="2" value="250">
+		<Help>Configuration Value 1 1-255
+		Configuration Value 1 is to Specify the time that Dimmer need blink, The unit is Second;
+		Configuration Value 2 1-255
+		Configuration Value 2 is to Specify the Cycle of on/off; the unit of it is 0.1 second.
+		For example: if we set Configuration Value 1 to '15',Configuration Value 2 to '10',then Dimmer will open 0.5
+		second, close 0.5 second, and repeat for 14 times
+		</Help>
+	</Value>
+	-->
+    <Value type="list" index="3" genre="config" label="Current Overload Protection" units="" min="0" max="1" size="1" value="0">
+      <Help>Load will be closed when the Current overruns (US 15.5A, Others 16.2) for more than 2 minutes</Help>
+      <Item label="Deactivate Overload Protection (Default)" value="0"/>
+      <Item label="Active Overload Protection" value="1"/>
+    </Value>
+    <Value type="list" index="20" genre="config" label="Output Load Status" units="" min="0" max="2" size="1" value="0">
+      <Help>Configure the output load status after re-power on.</Help>
+      <Item label="Last status (Default)" value="0"/>
+      <Item label="Always on" value="1"/>
+      <Item label="Always off" value="2"/>
+    </Value>    
+    <!--  Doesn't work
+    <Value type="byte" index="33" genre="config" label="RGB Led Color for Testing" units="" min="1" max="4" size="1" value="0">
+      <Help>Configure the RGB Led Color for Testing
+      Byte 1 - Reserved
+      Byte 2 - Red Value
+      Byte 3 - Green Value
+      Byte 4 - Blue Value</Help>
+    </Value>    
+    -->
+    <Value type="list" index="80" genre="config" label="Notification status" units="" min="0" max="2" size="1" value="2">
+      <Help>Defines the automated status notification of an associated device when status changes</Help>
+      <Item label="Nothing" value="0" />
+      <Item label="Hail" value="1" />
+      <Item label="Basic" value="2" />
+    </Value>
+    <Value type="list" index="81" genre="config" label="Configure the state of the LED" units="" min="0" max="1" size="1" value="0">
+    	<Help>Configure what the LED Ring displays during operations</Help>
+    	<Item label="The LED will follow the status (on/off) of its load. (Default)" value="0"/>
+    	<Item label="When the state of the Switch changes, the LED will follow the status (on/off) of its load, but the LED will turn off after 5 seconds." value="1"/> 
+    	<Item label="Night Light Mode" value="2" />
+    </Value>
+    <Value type="byte" index="83" genre="config" label="Night Light Color" units="" min="0" max="16777215" size="3" value="14524637">
+    	<Help>Configure the RGB Value when in Night Light Mode.
+    	Byte 1: Red Color
+    	Byte 2: Green Color
+    	Byte 3: Blue Color
+    	</Help>
+    </Value>
+    <Value type="byte" index="84" genre="config" label="RGB Brightness in Energy Mode" units="" min="0" max="16777215" size="3" value="5263440">
+    	<Help>Configure the brightness level of RGB LED (0%-100%) when it is in Energy Mode/momentary indicate mode.
+    	Byte 1: Red Color
+    	Byte 2: Green Color
+    	Byte 3: Blue Color
+    	</Help>
+    </Value>
+    <Value type="bool" index="90" genre="config" label="Enables/disables parameter 91/92" units="" value="0">
+      <Help>
+	Enable/disable Wattage threshold and percent.
+      </Help>
+    </Value>
+    <Value type="short" index="91" genre="config" label="Minimum Change to send Report (Watt)" units="watts" min="0" max="32000" size="2" value="25">
+      <Help>The value represents the minimum change in wattage for a Report to be sent (default 25 W)</Help>
+    </Value>
+    <Value type="byte" index="92" genre="config" label="Minimum Change to send Report (%)" units="%" min="0" max="100" value="5">
+      <Help>The value represents the minimum percentage change in wattage for a Report to be sent (Default 5)</Help>
+    </Value>
+    <Value type="button" index="100" genre="config" label="Default Group Reports" units="" write_only="true" affects="101,102,103">
+      <Help>
+	Set report types for groups 1, 2 and 3 to default.
+      </Help>
+    </Value>
+    <Value type="int" index="101" genre="config" label="Report type sent in Reporting Group 1" units="" value="4">
+      <Help>
+	Defines the type of report sent for reporting group 1. 2 is multisensor report. 4 is meter report for watts. 8 is meter report for kilowatts.
+	 Value 1 (msb) Reserved
+	 Value 2 Reserved
+	 Value 3 Reserved
+	 Value 4 (lsb) 
+	 	bits 7-4 reserved
+        bit 3 KWH
+		bit 2 Watt
+		bit 1 Current
+		bit 0 Voltage
+      </Help>
+    </Value>
+    <Value type="int" index="102" genre="config" label="Report type sent in Reporting Group 2" units="" value="8">
+      <Help>
+	Defines the type of report sent for reporting group 1. 2 is multisensor report. 4 is meter report for watts. 8 is meter report for kilowatts.
+	 Value 1 (msb) Reserved
+	 Value 2 Reserved
+	 Value 3 Reserved
+	 Value 4 (lsb) 
+	 	bits 7-4 reserved
+        bit 3 KWH
+		bit 2 Watt
+		bit 1 Current
+		bit 0 Voltage
+      </Help>
+    </Value>
+    <Value type="int" index="103" genre="config" label="Report type sent in Reporting Group 3" units="" value="0">
+      <Help>
+	Defines the type of report sent for reporting group 1. 2 is multisensor report. 4 is meter report for watts. 8 is meter report for kilowatts.
+	 Value 1 (msb) Reserved
+	 Value 2 Reserved
+	 Value 3 Reserved
+	 Value 4 (lsb) 
+	 	bits 7-4 reserved
+        bit 3 KWH
+		bit 2 Watt
+		bit 1 Current
+		bit 0 Voltage
+      </Help>
+    </Value>
+    <Value type="button" index="110" genre="config" label="Set 111 to 113 to default" units="" write_only="true" value="0" affects="111,112,113">
+      <Help>
+	Set time interval for sending reports for groups 1, 2 and 3 to default.
+      </Help>
+    </Value>
+    <Value type="int" index="111" genre="config" label="Send Interval for Reporting Group 1" units="seconds" min="0" max="65535" value="600">
+      <Help>
+	Defines the time interval when the defined report for group 1 is sent.
+      </Help>
+    </Value>
+    <Value type="int" index="112" genre="config" label="Send Interval for Reporting Group 2" units="seconds" min="0" max="65535" value="600">
+      <Help>
+	Defines the time interval when the defined report for group 2 is sent.
+      </Help>
+    </Value>
+    <Value type="int" index="113" genre="config" label="Send Interval for Reporting Group 3" units="seconds" min="0" max="65535" value="600">
+      <Help>
+	Defines the time interval when the defined report for group 3 is sent.
+      </Help>
+    </Value>
+    <Value type="list" index="200" genre="config" label="Partner ID" units="" min="0" max="1" size="1" value="0">
+      <Help>Partner ID</Help>
+      <Item label="Aeon Labs Standard (Default)" value="0"/>
+      <Item label="Others" value="1"/>
+    </Value>
+    <Value type="list" index="252" genre="config" label="Configuration Locked" units="" min="0" max="1" size="1" value="0">
+      <Help>Enable/disable Configuration Locked</Help>
+      <Item label="Disable" value="0"/>
+      <Item label="Enable" value="1"/>
+    </Value>
+    <Value type="short" index="254" genre="config" label="Device tag" units="" min="0" max="65535" value="0">
+      <Help>
+	Device tag.
+      </Help>
+    </Value>
+    <Value type="button" index="255" genre="config" label="Reset device" units="" write_only="true">
+      <Help>
+	Reset to the default configuration.
+      </Help>
+    </Value>
+  </CommandClass>
+
+  <!-- Association Groups -->
+  <CommandClass id="133">
+    <Associations num_groups="2">
+      <Group index="1" max_associations="5" label="LifeLine" auto="true" />
+      <Group index="2" max_associations="5" label="Retransmit Switch CC" />
+    </Associations>
+  </CommandClass>
+</Product>
+
