@@ -61,7 +61,7 @@
 		<Product type="0003" id="000d" name="Micro Smart Energy Illuminator"/>
 		<Product type="0003" id="000e" name="Micro Motor Controller"/>
 		<Product type="0003" id="0011" name="Micro Double Switch" />
-                <Product type="0003" id="0018" name="Smart Switch (2nd Edition)"/>
+        <Product type="0003" id="0018" name="Smart Switch (2nd Edition)"/>
 		<Product type="0003" id="001a" name="Micro Switch (2nd Edition)"/>
 		<Product type="0003" id="001b" name="Micro Smart Energy Illuminator G2"/>
 		<Product type="0003" id="0012" name="Micro Smart Energy Switch G2" config="aeotec/ses.xml" />
@@ -70,10 +70,10 @@
 		<Product type="0003" id="004e" name="Heavy Duty Smart Switch Gen5" config="aeotec/hdss_gen5.xml" />
 		<Product type="0004" id="0025" name="Z-Wave Repeater"/>
 		<Product type="0004" id="0050" name="DSD31 Siren Gen5" config="aeotec/dsd31.xml"/>
-        	<!-- US-market products start with type prefix "01" -->
+        <!-- US-market products start with type prefix "01" -->
 		<Product type="0101" id="005a" name="Z-Stick Gen5"/>
 		<Product type="0102" id="0059" name="Recessed Door Sensor Gen5" config="aeotec/recessed_doorsensor_gen5.xml"/>
-	        <!-- AU-market products start with type prefix "02" -->
+	    <!-- AU-market products start with type prefix "02" -->
 		<Product type="0202" id="0059" name="Recessed Door Sensor Gen5" config="aeotec/recessed_doorsensor_gen5.xml"/>
 		<Product type="0003" id="0060" name="Smart Switch 6" config="aeotec/ss6.xml" />
 		<Product type="0103" id="0060" name="Smart Switch 6" config="aeotec/ss6.xml" />
@@ -84,6 +84,9 @@
 		<Product type="0003" id="0062" name="LED Bulb" config="aeotec/ledbulb.xml" />
 		<Product type="0103" id="0062" name="LED Bulb" config="aeotec/ledbulb.xml" />
 		<Product type="0203" id="0062" name="LED Bulb" config="aeotec/ledbulb.xml" />
+		<Product type="0003" id="0063" name="Smart Dimmer 6" config="aeotec/sd6.xml" />
+		<Product type="0103" id="0063" name="Smart Dimmer 6" config="aeotec/sd6.xml" />
+		<Product type="0203" id="0063" name="Smart Dimmer 6" config="aeotec/sd6.xml" />
 	</Manufacturer>
         <Manufacturer id="0111" name="Airline Mechanical">
                 <Product type="8200" id="0200" name="ZDS-100"/>
