@@ -191,6 +191,7 @@ Version 1.3
    cyr123 (Justin)
  - Pull Request #640 - Add FGD212 Dimmer 2 Config from xs4 (Justin)
  - Pull Request #641 - Update ZMNHBA2 Config from xs4 (Justin)
+ - Add Aeotec Smart Dimmer 6 Config (Justin)
 
 Version 1.2 
  - Released on 15/10/14
